--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -20,14 +20,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="project" id="71M-M2-Fer" customClass="ProjectsTableViewCell" customModule="Zedit" customModuleProvider="target">
-                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="42.666667938232422"/>
+                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="43"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="71M-M2-Fer" id="Kpv-LC-8tS">
-                                    <rect key="frame" x="0.0" y="0.0" width="353" height="42.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHv-zq-cQ6">
-                                            <rect key="frame" x="20" y="11.000000000000002" width="313" height="20.666666666666671"/>
+                                            <rect key="frame" x="20" y="11" width="313" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -127,36 +127,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lka-yF-Rkw">
-                                <rect key="frame" x="16" y="0.0" width="74" height="92.333333333333329"/>
+                                <rect key="frame" x="16" y="0.0" width="119" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="fdD-KJ-YbV"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="cancel"/>
                                 <connections>
                                     <segue destination="hYy-BM-7Ke" kind="unwind" identifier="cancel" unwindAction="unwindToMyProjects:" id="fyF-v9-oK7"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Bej-KG-fH2">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="Bej-KG-fH2">
                                 <rect key="frame" x="0.0" y="92.333333333333314" width="393" height="749.66666666666674"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sw3-ff-XIC">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="34.333333333333336"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Select Video"/>
-                                        <connections>
-                                            <action selector="selectVideoButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="nNC-uG-yR6"/>
-                                        </connections>
-                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hev-bh-iPS">
-                                        <rect key="frame" x="0.0" y="42.333333333333314" width="393" height="562"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="592.33333333333337"/>
                                         <color key="backgroundColor" systemColor="systemGray3Color"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Project Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBA-Vm-RWJ">
-                                        <rect key="frame" x="0.0" y="612.33333333333326" width="393" height="28.666666666666629"/>
+                                        <rect key="frame" x="0.0" y="603.33333333333326" width="393" height="28.666666666666629"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Project Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dgd-S4-TpP">
-                                        <rect key="frame" x="0.0" y="649" width="393" height="30"/>
+                                        <rect key="frame" x="0.0" y="643" width="393" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Ggs-vz-WWz"/>
                                         </constraints>
@@ -164,7 +159,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-qH-RvL">
-                                        <rect key="frame" x="0.0" y="687" width="393" height="20.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="684" width="393" height="20.333333333333371"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="systemRedColor"/>
                                         <nil key="highlightedColor"/>
@@ -179,16 +174,27 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sw3-ff-XIC">
+                                <rect key="frame" x="0.0" y="49" width="393" height="34.333333333333336"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Select Video"/>
+                                <connections>
+                                    <action selector="selectVideoButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="nNC-uG-yR6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1UG-VX-ipz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Lka-yF-Rkw" firstAttribute="top" secondItem="1UG-VX-ipz" secondAttribute="top" id="9b2-pY-Vqy"/>
+                            <constraint firstItem="1UG-VX-ipz" firstAttribute="trailing" secondItem="Lka-yF-Rkw" secondAttribute="trailing" constant="258" id="7EB-In-7fc"/>
+                            <constraint firstItem="Lka-yF-Rkw" firstAttribute="leading" secondItem="ceu-HX-njB" secondAttribute="leadingMargin" id="AVH-oi-s85"/>
                             <constraint firstItem="Bej-KG-fH2" firstAttribute="leading" secondItem="1UG-VX-ipz" secondAttribute="leading" id="EHc-Hf-ZwR"/>
-                            <constraint firstItem="Lka-yF-Rkw" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ceu-HX-njB" secondAttribute="leadingMargin" id="HWN-KM-duy"/>
                             <constraint firstItem="Bej-KG-fH2" firstAttribute="trailing" secondItem="1UG-VX-ipz" secondAttribute="trailing" id="abE-pT-mbo"/>
-                            <constraint firstItem="Bej-KG-fH2" firstAttribute="top" secondItem="Lka-yF-Rkw" secondAttribute="bottom" id="mSk-x6-2Sz"/>
-                            <constraint firstItem="1UG-VX-ipz" firstAttribute="trailing" secondItem="Lka-yF-Rkw" secondAttribute="trailing" constant="303" id="n0J-db-pyJ"/>
+                            <constraint firstItem="Sw3-ff-XIC" firstAttribute="top" secondItem="Lka-yF-Rkw" secondAttribute="bottom" constant="8" symbolic="YES" id="gjX-sr-Als"/>
+                            <constraint firstItem="Sw3-ff-XIC" firstAttribute="trailing" secondItem="Bej-KG-fH2" secondAttribute="trailing" id="gq7-cZ-zbl"/>
+                            <constraint firstItem="Lka-yF-Rkw" firstAttribute="top" secondItem="1UG-VX-ipz" secondAttribute="top" id="hV2-Hu-Ayj"/>
+                            <constraint firstItem="Bej-KG-fH2" firstAttribute="top" secondItem="Lka-yF-Rkw" secondAttribute="bottom" constant="51.333333333333314" id="lbI-Qq-H7w"/>
+                            <constraint firstItem="Sw3-ff-XIC" firstAttribute="leading" secondItem="Bej-KG-fH2" secondAttribute="leading" id="w2h-h4-OBN"/>
                             <constraint firstItem="1UG-VX-ipz" firstAttribute="bottom" secondItem="Bej-KG-fH2" secondAttribute="bottom" id="w9g-OV-xjS"/>
                         </constraints>
                     </view>
@@ -203,7 +209,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rKg-pu-KQ1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="hYy-BM-7Ke" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4250" y="-675"/>
+            <point key="canvasLocation" x="4249.6183206106871" y="-675.35211267605632"/>
         </scene>
         <!--Color View Controller-->
         <scene sceneID="kEe-DT-egJ">
